fix header banner margins on mobile and tablet views

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -713,7 +713,7 @@ h2, .h2 {
     color: #0067c5;
     font-weight: 700;
     font-size: 30px;
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     border: 2px solid #0067c5;
@@ -752,8 +752,11 @@ fa-chevron-circle-right {
     .page-tag {
         margin-left: 0px;
     }
+    .introduction {
+        margin-left: -30px;
+        margin-right: -30px;
+    }
 }
-
 
 @media screen and (max-width: 679px) {
     .site-header .navlist ul {
@@ -784,7 +787,7 @@ fa-chevron-circle-right {
         padding-top: 0px;
     }
     .banner p {
-        font-size: 16px;
+        font-size: 14px;
     }
     .banner a .fa {
     font-size: 16px;
@@ -795,6 +798,10 @@ fa-chevron-circle-right {
     .counter {
         float:left;
         font-size: 18px;
+    }
+    .introduction {
+        margin-left: -15px;
+        margin-right: -15px;
     }
 }
 
